fixed align-center + fonts

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,6 +1,7 @@
 .content {
   margin: 0 auto;
   padding: 0;
+  font-family: 'Inter', Arial, sans-serif;
   max-width: 1280px;
   min-width: 320px;
 }
