--- a/blocks/popup/__form-submit/popup__form-submit.css
+++ b/blocks/popup/__form-submit/popup__form-submit.css
@@ -6,7 +6,7 @@
   background-color: #000;
   border: none;
   border-radius: 2px;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
