--- a/blocks/profile/__info-container/profile__info-container.css
+++ b/blocks/profile/__info-container/profile__info-container.css
@@ -16,7 +16,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
   .profile__info-container {
-    max-width: 100%;
+    max-width: 262px;
     align-content: center;
     justify-content: center;
     margin: 0;
