--- a/blocks/profile/__info-job/profile__info-job.css
+++ b/blocks/profile/__info-job/profile__info-job.css
@@ -2,7 +2,7 @@
   max-width: 90%;
   margin: 0 0 25px;
   padding: 0;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
