--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -2,7 +2,7 @@
   max-width: 90%;
   margin: 18px 0 16px;
   padding: 0;
-  font-family: Inter;
+  font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
